# nixpytorch

./: flake.nix
pyenvs/default/: pyproject.toml
